--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ body {
    white-space: nowrap;
 }
 
+.blog-title:hover {
+   color: hsl(47, 88%, 63%);
+   cursor: pointer;
+}
+
 .blog-description {
    font-family: 'Figtree';
    font-weight: 500;
